--- a/style.css
+++ b/style.css
@@ -52,12 +52,13 @@
 
 #suggestion-container {
 	width: 80%; 
-	padding: 10px 0px; 
+	padding: 10px 0px;
+	padding-right: 62px;
 	background-color: rgba(0,0,0,0); 
 	margin: 0; 
 	display: inline-block; 
 	text-align: left;
-	border:1px solid black;
+	border:1px solid gray;
 	border-top: 0;
 	display: none;
 }
