--- a/style.css
+++ b/style.css
@@ -274,3 +274,36 @@
 .discussion-container #comment-submit:active{
 	border-color: #007700;
 }
+
+/* =============================== Login Section ==================================== */
+
+#header-login-container {
+	position: absolute; 
+	top: 10px; 
+	right: 10px; 
+	width: 70px; 
+	height: 35px;
+}
+
+#header-login-container #header-login-btn {
+	background-color: rgba(230,230,230,0); 
+	width: 100%; 
+	height: 100%; 
+	border: 1px solid rgba(0,0,0,0.5);
+	border-left: 0; border-right: 0;
+	cursor: pointer; 
+	font-weight: bold; 
+	font-size: 12px;
+}
+
+#header-login-container #header-login-btn:focus {
+	outline: 0;
+}
+
+#header-login-container #header-login-btn:hover {
+	background-color: rgba(230,230,230,0.3);
+}
+
+#header-login-container #header-login-btn:active {
+	background-color: rgba(230,230,230,0.7);
+}
